# raytracer

./: .gitignore  .travis.yml  README.md
raytracer/: Cargo.toml  commit.py  raytracer.py
raytracer/docs/: aliases.js  search-index.js  source-files.js
raytracer/docs/aho_corasick/: struct.AcAutomaton.html  struct.Dense.html  struct.FullAcAutomaton.html  struct.Sparse.html
raytracer/docs/byteorder/: enum.BigEndian.html  enum.LittleEndian.html
raytracer/docs/clicolors_control/: index.html
raytracer/docs/console/: enum.Alignment.html  enum.Attribute.html  enum.Color.html  enum.Key.html  enum.TermFamily.html  enum.TermTarget.html  fn.style.html  fn.user_attended.html  index.html  struct.AnsiCodeIterator.html  struct.Emoji.html  struct.Style.html  struct.StyledObject.html  struct.Term.html  struct.TermFeatures.html
raytracer/docs/deflate/: enum.Compression.html  enum.MatchingType.html  enum.SpecialOptions.html  struct.CompressionOptions.html
raytracer/docs/gif/: enum.Block.html  enum.DecodingError.html  enum.DisposalMethod.html  enum.Extension.html  struct.Frame.html
raytracer/docs/image/: enum.ColorType.html  enum.DecodingResult.html  enum.DynamicImage.html  enum.FilterType.html  enum.ImageError.html  enum.ImageFormat.html  enum.ImageOutputFormat.html  struct.Bgr.html  struct.Bgra.html  struct.Frame.html  struct.Frames.html  struct.ImageBuffer.html  struct.Luma.html  struct.LumaA.html  struct.MutPixels.html  struct.Pixels.html  struct.Rgb.html  struct.Rgba.html  struct.SubImage.html  trait.ConvertBuffer.html  trait.Pixel.html  (+3 more)
raytracer/src/: args.rs  main.rs
(+1271 files in other folders)
