[package]
name = "raytracer"
version = "0.1.0"
authors = ["Jordan Osborn <jordanosborn0@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Raytracer"

[profile.dev]
debug = true
opt-level = 1

[dependencies]
rand = "0.8.1"
rayon = "1.5.0"
indicatif = {version = "0.15.0", features = ["rayon"]}
image = "0.23.12"
clap = { version = "3.0.0-beta.2" }
itertools = "0.10.0"
# Numerical optimisation code
# serde csv/json for scene serialisation loading 
